Add unit tests for Identity core - SAMLSSOServiceProviderDAO